# python_exercises

./: SentimentAnalaysis_Avengers.ipynb
mod00/ex00/: answers.txt  requirements.txt
mod00/ex01/: exec.py
mod00/ex02/: whois.py
mod00/ex03/: count.py
mod00/ex04/: operations.py
mod00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
mod00/ex06/: recipe.py
mod00/ex07/: filterwords.py
mod00/ex08/: sos.py
mod00/ex09/: guess.py
mod01/ex00/: book.py  recipe.py  test.py
mod01/ex01/: game.py
mod01/ex02/: test.py  vector.py
mod01/ex03/: generator.py
mod01/ex04/: eval.py
mod01/ex05/: the_bank.py
mod02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
mod02/ex01/: main.py
mod02/ex03/: csvreader.py
mod02/ex04/packaging_tutorial/: README.md  pyproject.toml
mod02/ex04/packaging_tutorial/src/ft_package_mrosario/: loading.py  logger.py
mod02/ex05/: TinyStatistician.py
mod03/ex00/: SentimentAnalaysis_Avengers.ipynb
