[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ft_package_mrosario"
version = "0.0.1"
authors = [
  { name="Miki Rosario", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mikirosario/python_exercises"